# atlas

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile.api  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 03bc1183d4b5_add_agent_run_position_snapshot_.py  1e3b595921ab_add_aktienfinder_screener_candidate.py  4708e243f853_add_market_news_headline.py  4a5af5b72b93_add_aktienfinder_blog_post.py  71687961eb9f_add_market_bar.py  7185387df564_initial_schema_persona_portfolio_cycle_.py  74cd69ad0125_add_edgar_filing.py  b7876aca814a_add_publication_article.py  b8bf07d06546_add_musterdepot_transaction.py  c59e1bad9f32_add_reddit_post.py  ce4f6d238812_add_screener_result.py  ce9754a967cb_add_btc_dominance_snapshot.py  f51bad7b1d9a_add_aktienfinder_snapshot.py
config/: broker.yaml  cycles.yaml  hitl.yaml  ingestion.yaml  litellm_proxy_config.yaml  llm.yaml  risk.yaml
config/grafana/: atlas-overview-dashboard.json
config/personas/: chartist.yaml  contra.yaml  cryptor.yaml  guardian.yaml  hype.yaml  vulture.yaml
docs/: deployment.md  security-audit-2026-07-07.md
docs/adr/: 0001-alpaca-paper-account-limit.md  0002-alpaca-crypto-de-residents.md  0003-alpaca-paper-starting-capital.md  0004-cost-cap-currency-approximation.md  0005-analyst-rating-history-parked.md  0006-aktienfinder-screener-instead-of-static-list.md  0007-branch-protection-main-via-ruleset.md  template.md
docs/dod/: phase-2.md  phase-3.md  phase-4.md
docs/features/: F001-broker-adapter.md  F002-internal-ledger-adapter.md  F003-db-schema-decision-order-record.md  F004-risk-gate.md  F005-telegram-bot.md  F006-litellm-client.md  F007-fastapi-web-skeleton.md  F008-marktdaten-sync.md  F009-edgar-rss.md  F010-vulture-screener.md  F011-publications-pdf-fallback.md  F012-aktienfinder-grabbing.md  F013-publications-mail-trigger.md  F014-musterdepot-transactions.md  F015-persona-portfolio-seed.md  F016-orchestrator-graph-skeleton.md  F017-shared-research-synthesis.md  F018-persona-charters.md  F019-cost-ledger-enforcement.md  F020-portfolio-risk-inputs.md  F021-persona-analysis-agent.md  F022-hitl-flow.md  F023-trading-agent.md  F024-reporting-agent.md  F025-cycle-scheduling.md  F026-stop-sweep-wiring.md  F027-order-idempotency.md  F028-budget-check-race.md  F029-scheduler-logging-alert.md  F030-hitl-timeout-sweep.md  F031-risk-inputs-timezone-and-cost-header.md  F032-scheduler-activation.md  F033-research-item-recency-signal.md  F034-persona-detail-page.md  F035-ingestion-scheduler-activation.md  F036-technical-indicator-research-items.md  F037-aktienfinder-candidate-list-and-scheduling.md  F038-publications-column-aware-extraction.md  F039-reddit-ingestion.md  F040-btc-dominance-ingestion.md  (+37 more)
n8n/: publications-mail-trigger.json
scripts/: backfill_ledger_order_fills.py  boersenmedien_session.py  ingest_publications.py  run_cycle.py  run_scheduler.py  run_telegram_bot.py  seed_demo_snapshot.py  seed_personas.py
src/: logging_config.py
src/api/: app.py  routes.py  routes_ingestion.py  schemas.py
src/broker/: alpaca_paper.py  internal_ledger.py  ledger_store.py  market_data.py  protocol.py  registry.py
src/db/: base.py  models.py  validation.py
src/ingestion/: aktienfinder_blog.py  aktienfinder_grabbing.py  aktienfinder_screener.py  coingecko_global.py  crypto_market_data_sync.py  edgar_rss.py  market_data_sync.py  musterdepot_transactions.py  publications_download.py  publications_notify.py  publications_pipeline.py  reddit_sentiment.py  scheduler.py  vulture_screener.py  yahoo_finance_news.py
src/llm/: client.py  config.py  cost_guard.py  ledger.py
src/orchestrator/: cycles_config.py  decision_sizing.py  graph.py  hitl_config.py  indicators.py  llm_decision_schema.py  market_pricing.py  persona_analysis.py  reporting.py  research_search.py  research_synthesis.py  risk_inputs.py  scheduler.py  seed.py  symbol_universe.py  trading.py
src/personas/: charters.py
src/risk/: config.py  gate.py  models.py
src/telegram/: alerts.py  bot.py  commands.py  config.py  digest.py  hitl.py  hitl_store.py  security.py
tests/: conftest.py  test_logging_config.py
tests/api/: conftest.py  test_routes.py  test_routes_ingestion.py
tests/broker/: test_alpaca_paper.py  test_alpaca_paper_integration.py  test_internal_ledger.py  test_ledger_store.py  test_market_data.py  test_registry.py
tests/db/: conftest.py  factories.py  test_base.py  test_lineage.py  test_snapshots_and_ledger.py
tests/ingestion/: conftest.py  test_aktienfinder_blog.py  test_aktienfinder_grabbing.py  test_aktienfinder_grabbing_integration.py  test_aktienfinder_screener.py  test_coingecko_global.py  test_crypto_market_data_sync.py  test_edgar_rss.py  test_market_data_sync.py  (+8 more)
web/: Dockerfile  package-lock.json  package.json
(+44 files in other folders)
