[project]
name = "atlas"
version = "0.1.0"
description = "ATLAS: Agentic Trading & Learning Analysis System"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.33,<1.0",
    "pydantic>=2.7,<3.0",
    "pyyaml>=6.0,<7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
    "types-pyyaml>=6.0,<7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "src.risk.*"
strict = true

[[tool.mypy.overrides]]
module = "src.broker.*"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
