[project]
name = "atlas"
version = "0.1.0"
description = "ATLAS: Agentic Trading & Learning Analysis System"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.33,<1.0",
    "pydantic>=2.7,<3.0",
    "pyyaml>=6.0,<7.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "psycopg[binary]>=3.2,<4.0",
    "pgvector>=0.3,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
    "types-pyyaml>=6.0,<7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Alembic revision files are machine-generated (`alembic revision --autogenerate`);
# not hand-formatted to project style.
"alembic/versions/*.py" = ["E501", "I001", "UP007", "UP035"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "src.risk.*"
strict = true

[[tool.mypy.overrides]]
module = "src.broker.*"
strict = true

[[tool.mypy.overrides]]
module = "src.db.*"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: needs a real external service (Alpaca Paper); excluded by default, see CI.",
]
addopts = "-m 'not integration'"

[tool.coverage.run]
source = ["src"]
branch = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
