[project]
name = "atlas"
version = "0.1.0"
description = "ATLAS: Agentic Trading & Learning Analysis System"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.33,<1.0",
    "pydantic>=2.7,<3.0",
    "pyyaml>=6.0,<7.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "psycopg[binary]>=3.3.4,<4.0",
    "pgvector>=0.5.0,<1.0",
    "python-telegram-bot>=22.8,<23.0",
    "jinja2>=3.1,<4.0",
    "httpx>=0.27,<1.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.51.0,<1.0",
    "defusedxml>=0.7.1",
    "pymupdf>=1.28.0",
    "playwright>=1.61.0",
    "langgraph>=1.2.8",
    "langgraph-checkpoint-postgres>=3.1.0",
    "apscheduler>=3.11.3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1,<10.0",
    "pytest-cov>=7.1.0,<8.0",
    "ruff>=0.6,<1.0",
    "mypy>=2.3.0,<3.0",
    "types-pyyaml>=6.0,<7.0",
    "types-defusedxml>=0.7.0.20260504",
    "pip-audit>=2.7,<3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Alembic revision files are machine-generated (`alembic revision --autogenerate`);
# not hand-formatted to project style.
"alembic/versions/*.py" = ["E501", "I001", "UP007", "UP035"]
# FastAPI's Depends() is idiomatic in argument defaults (evaluated per-request by
# FastAPI's DI system, not a mutable-default-arg bug) — see FastAPI's own docs.
"src/api/routes.py" = ["B008"]
"src/api/routes_ingestion.py" = ["B008"]

[tool.ruff.format]
exclude = ["alembic/versions/*.py"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "src.risk.*"
strict = true

[[tool.mypy.overrides]]
module = "src.broker.*"
strict = true

[[tool.mypy.overrides]]
module = "src.db.*"
strict = true

[[tool.mypy.overrides]]
module = "src.ingestion.publications_pipeline"
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: needs a real external service (Alpaca Paper); excluded by default, see CI.",
]
addopts = "-m 'not integration'"

[tool.coverage.run]
source = ["src"]
branch = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
